# Openfeed

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: e2e.yml
config/: openfeed.yaml.example
docs/: architecture.md  custom-producer.md  opencli-service.md  operations.md  runtime-config.md
examples/ticlawk/: .env.local.example  README.md  openfeed.yaml  run-openfeed
examples/web/: .env.local.example  README.md  openfeed.yaml  run-openfeed
examples/web/local-quickstart/: README.md  openfeed.yaml  run-local-quickstart  seed_queue.py
scripts/: install  openfeed-cron-run
skills/feed-report/: SKILL.md
skills/openfeed-e2e/: SKILL.md  run_e2e.py
src/: README.md
src/openfeed/: cli.py  default_runtime.yaml  doctor.py  smoke_publish.py  status.py
src/openfeed/card_producers/: __init__.py  base.py
src/openfeed/clients/: llm.py
src/openfeed/core/: bootstrap_io.py  cleanup_assets.py  collect_feedback.py  deep_dive.py  discover.py  filter.py  interest_bootstrap.py  judgment_ledger.py  learn.py  learn_search_terms.py  patrol.py  prepare_video.py  push.py  queue_manage.py  refill_cycle.py  supply_cycle.py  topic_reconcile.py  youtube_source_review.py
src/openfeed/models/: content_item.py  feedback.py  history.py  html_card.py  image_assets.py  image_cache.py  interests.py  judgment.py  learn_state.py  persona.py  queue.py  runtime.py  seed_source.py  source.py  user_profile.py  validated_source.py  video_assets.py  video_cache.py
src/openfeed/opencli_service/: __init__.py  client.py  config.py  default_config.yaml  executor.py  models.py  scheduler.py  server.py  store.py
src/openfeed/prompts/: content_deep_diving.py  (+6 more)
(+38 files in other folders)
